--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 ﻿cmake_minimum_required (VERSION 3.13)
 
+if(NOT DEFINED PROJECT_NAME)
+  set(AMALTHEA_IS_NOT_SUBPROJECT ON)
+endif()
+
 project ("amalthea" VERSION "1.0.0" LANGUAGES CXX)
 
 include(GNUInstallDirs)
@@ -10,8 +14,11 @@ set (CMAKE_CXX_STANDARD_REQUIRED ON CACHE BOOL
      "The with CMAKE_CXX_STANDARD selected C++ standard is a requirement.")
 mark_as_advanced (CMAKE_CXX_STANDARD_REQUIRED)
 
-#add_subdirectory ("libs/emf4cpp/emf4cpp")
-set (EMF4CPP_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libs/emf4cpp/emf4cpp/cmake")
+#set(EMF4CPP_RESOURCE_API ON CACHE BOOL "Enable resource API")
+#set(EMF4CPP_USE_QT_5 ON CACHE BOOL "Use QT 5 as a dependency")
+#set(EMF4CPP_USE_CPPREST ON CACHE BOOL "Use CPPREST SDK as a dependency")
 
+add_subdirectory ("libs/emf4cpp")
+#set (EMF4CPP_DIR "${CMAKE_CURRENT_BINARY_DIR}/libs/emf4cpp/emf4cpp/cmake")
 
 add_subdirectory ("src-gen")
